deep learning model integrated

--- a/templates/bg_remove/bg_remove.html
+++ b/templates/bg_remove/bg_remove.html
@@ -18,6 +18,11 @@
     </div>
     <div class="col-md-6"></div>
 <div>
+<br><br>
+<div class="container">
+    <img src="{{image}}" height="200px" width="auto">
+</div>
+</div>
 
 </div>
 
