--- a/templates/bg_remove/bg_remove.html
+++ b/templates/bg_remove/bg_remove.html
@@ -20,11 +20,13 @@
 <div>
 <br><br>
 <div class="container">
-    <img src="{{image}}" height="200px" width="auto">
+    <img id='a' src="{{image}}" height="200px" width="auto">
+    <input type="file" name="xyz" id="file" value='Click'>
 </div>
 </div>
 
 </div>
+
 
 
 {% endblock %}
