--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,7 @@
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
@@ -26,6 +27,37 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
     -->
     <script>
+    $(document).ready(function(){
+             $("#file").change(function(){
+                   var length=this.files.length;
+                        if(!length){
+                          return false;
+                         }
+                        changeBackground(this);
+                });
+       });
+     
+      // Creating the function
+      function changeBackground(img){
+            var file = img.files[0];
+            var imagefile = file.type;
+            var match= ["image/jpeg","image/png","image/jpg"];
+                  if(!((imagefile==match[0]) || (imagefile==match[1]) || (imagefile==match[2]))){
+                        alert("Invalid File Extension");
+                  }else{
+                        var reader = new FileReader();
+                        reader.onload = imageIsLoaded;
+                        reader.readAsDataURL(img.files[0]);
+                  }
+            function imageIsLoaded(e) {
+                  $('#a').css({ 'background-image': "url(" + e.target.result + ")" });
+                  document.getElementById('a').style.backgroundRepeat="no-repeat";
+                  //document.getElementById('a').style.backgroundAttachment="fixed";  
+                  document.getElementById('a').style.backgroundSize="cover";
+           
+                  }     
+            }
+
     function readURL(input) {
             if (input.files && input.files[0]) {
                 var reader = new FileReader();
