--- a/templates/costumers/login.html
+++ b/templates/costumers/login.html
@@ -5,17 +5,19 @@
   <form method="POST" action="authenticate/">
       {% csrf_token %}
     <div class="form-group row">
-      <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
+      <label class="col-sm-2 col-form-label">Username</label>
       <div class="col-sm-10">
-        <input type="text" class="form-control" aria-describedby="emailHelp" placeholder="Enter Username" name="username">
+        <input type="text" id="username" class="form-control" aria-describedby="emailHelp" placeholder="Enter Username" name="username">
       </div>
+      <div id="error_username" style="color: red"></div><br>
   </div>
   <div class="form-group row">
     <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
     <div class="col-sm-10">
-      <input type="password" class="form-control" placeholder="Password" name="password">
+      <input type="password" id="pwd" class="form-control" placeholder="Password" name="password">
     </div>
   </div>
+  <div id="pwd_strength" style="color: red"></div><br>
   <button type="submit" class="btn btn-primary" style="margin-left: 500px">LOGIN</button>
   </form>
 </div>
