--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
     -->
     <script>
     $(document).ready(function(){
-             $("#file").change(function(){
+             $("#files").change(function(){
                    var length=this.files.length;
                         if(!length){
                           return false;
@@ -103,7 +103,7 @@
         }
       })
 
-     
+
       // Creating the function
       function changeBackground(img){
             var file = img.files[0];
@@ -119,10 +119,10 @@
             function imageIsLoaded(e) {
                   $('#a').css({ 'background-image': "url(" + e.target.result + ")" });
                   document.getElementById('a').style.backgroundRepeat="no-repeat";
-                  //document.getElementById('a').style.backgroundAttachment="fixed";  
+                  //document.getElementById('a').style.backgroundAttachment="fixed";
                   document.getElementById('a').style.backgroundSize="cover";
-           
-                  }     
+
+                  }
             }
 
     function readURL(input) {
@@ -130,13 +130,26 @@
                 var reader = new FileReader();
 
                 reader.onload = function (e) {
-                    $('#inp_img')
+                    $('#a')
                         .attr('src', e.target.result);
                 };
 
                 reader.readAsDataURL(input.files[0]);
             }
         }
+
+        function readURL_bg(input) {
+                if (input.files && input.files[0]) {
+                    var reader = new FileReader();
+
+                    reader.onload = function (e) {
+                        $('#bg_img')
+                            .attr('src', e.target.result);
+                    };
+
+                    reader.readAsDataURL(input.files[0]);
+                }
+            }
     </script>
   </body>
 </html>
