--- a/templates/bg_remove/change_bg.html
+++ b/templates/bg_remove/change_bg.html
@@ -15,6 +15,7 @@
     <div class="form-group">
         <input type="submit" name="">
     </div>
+    <img src={{image}} alt="" id="finalImg" style="display: none">
 </form>
 </div>
 
@@ -24,6 +25,7 @@
     <div class="col-md-6">
         <img src="#" alt="" id="a">
     </div>
+     <a href="#" onclick="prepHref(this)" download>Click here to download image</a>
     <!-- <div class="col-md-6">
         <img src="#" alt="" id="a">
     </div> -->
