--- a/templates/bg_remove/change_bg.html
+++ b/templates/bg_remove/change_bg.html
@@ -25,7 +25,7 @@
     <div class="col-md-6">
         <img src="#" alt="" id="a">
     </div>
-     <a href="#" onclick="prepHref(this)" download>Click here to download image</a>
+     <a href="#" onclick="prepHref(this)" download="">Download</a>
     <!-- <div class="col-md-6">
         <img src="#" alt="" id="a">
     </div> -->
