payment gateway updated

--- a/templates/costumers/verification_success.html
+++ b/templates/costumers/verification_success.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     {% if success %}
-        You have confirmed your account!
+    <h3>You have confirmed your account!</h3>
+    <p>click <a href="http://127.0.0.1:8000/users/login/">here</a></p>
+
     {% else %}
         Error, invalid token!
     {% endif %}
