--- a/templates/costumers/login.html
+++ b/templates/costumers/login.html
@@ -2,7 +2,7 @@
 {% block base_temp %}
 
 <div class="container" style="margin-top: 100px">
-  <form method="POST" action="authenticate/">
+  <form method="POST" action="{% url 'users:authenticate' %}">
       {% csrf_token %}
     <div class="form-group row">
       <label class="col-sm-2 col-form-label">Username</label>
