--- a/templates/costumers/register.html
+++ b/templates/costumers/register.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block base_temp %}
 <div class="container" style="margin-top: 100px">
-  <form method="POST" action="signup/">
+  <form method="POST" action="{% url 'users:user_signup' %}">
     {% csrf_token%}
     <div class="form-group">
       <label for="exampleInputEmail1">Username</label>
