--- a/templates/costumers/emailverification.html
+++ b/templates/costumers/emailverification.html
@@ -9,5 +9,7 @@
     <body>
         <h1>You are almost there!</h1><br>
         <h2>Please click <a href="{{ link }}">here</a> to confirm your account</h2>
+        <h2>If the above hpyperlink doesn't appear copy paste the following link in any browser url</h2>
+        <p>{{link}}</p>  
     </body>
 </html>
