--- a/templates/costumers/verification_success.html
+++ b/templates/costumers/verification_success.html
@@ -10,7 +10,7 @@
 <body>
     {% if success %}
     <h3>You have confirmed your account!</h3>
-    <p>click <a href=" https://8882d87c3b3e.ngrok.io/users/login/">here</a></p>
+    <p>click <a href="http://127.0.0.1:8000/users/login/">here</a></p>
 
     {% else %}
         Error, invalid token!
